tests/parser/tests/cases/should_fail/char_literals/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:6
1 |   k := 'av';
  |        ^^^^ here
  = note: Invalid character literal `av`, character literals may only contain one codepoint
